--- a/mtn-wallet.html
+++ b/mtn-wallet.html
@@ -29,7 +29,7 @@
                         <p class="text-[12px] font-bold text-slate-400 p-0 m-0">MTN MoMo</p>
                     </div>
                 </div>
-                <p class="text-[#E34C00] pr-[0.5rem]"><a href="payment-methods.html">Change</a></p>
+                <p class="text-rose-500 pr-[0.5rem]"><a href="payment-methods.html">Change</a></p>
             </div>
 
             <div class="mt-[1rem]">
@@ -42,7 +42,7 @@
                         <input type="number" name="cash" id="cash" value="GHS 1000" disabled placeholder="GHS 1000" class="w-[100%] text-[14px] font-bold bg-transparent p-[0.7rem] outline-none">
                     </div>
                     <p class="text-red-400 text-center py-[0.5rem]"><a href="#!">Need help with payment?</a></p>
-                    <button class="inline-block bg-[#FC5944]  px-[1rem] p-[0.5rem] rounded-[60px] w-[100%]">
+                    <button class="inline-block bg-rose-500 py-[0.5rem] rounded-full w-[100%]">
                         <a href="otp-approval.html" class="no-underline text-white uppercase font-bold text-[13px]">pay (GHS 1000)</a>
                     </button>
                 </form>
