--- a/otp-approval.html
+++ b/otp-approval.html
@@ -35,7 +35,7 @@
                         <i id="toggleEye"  class="fa fa-solid fa-eye-slash pr-[1rem] cursor-pointer text-[14px] text-slate-400" onclick="toggleOTPVisibility()"></i>
                     </div>
                     <p class="text-red-400 text-center py-[0.5rem]"><a href="payment-methods.html">Resend OTP</a></p>
-                    <button class="inline-block bg-[#FC5944]  px-[1rem] p-[0.5rem] rounded-[60px] w-[100%]">
+                    <button class="inline-block bg-rose-500 py-[0.5rem] rounded-full w-[100%]">
                         <a href="congratulation.html" class="no-underline text-white uppercase font-bold text-[13px]">Approve Payment</a>
                     </button>
                 </form>
