--- a/debit-card-wallet.html
+++ b/debit-card-wallet.html
@@ -29,7 +29,7 @@
                         <p class="text-[12px] font-bold text-slate-400 p-0 m-0">Debit Card</p>
                     </div>
                 </div>
-                <p class="text-[#E34C00] pr-[0.5rem]"><a href="payment-methods.html">Change</a></p>
+                <p class="text-rose-500 pr-[0.5rem]"><a href="payment-methods.html">Change</a></p>
             </div>
 
             <div class="mt-[1rem]">
@@ -55,7 +55,7 @@
                             <i class="fa-solid fa-key absolute text-[14px] left-[10px]"></i>
                         </div>
                     </div>
-                    <button type="submit" class="inline-block bg-[#FC5944]  px-[1rem] p-[0.5rem] rounded-[60px] w-[100%]">
+                    <button type="submit" class="inline-block bg-rose-500 py-[0.5rem] rounded-full w-[100%]">
                         <a href="otp-approval.html"" class="no-underline text-white uppercase font-bold text-[13px]">pay (GHS 1000)</a>
                     </button>
                 </form>
