--- a/index.html
+++ b/index.html
@@ -9,21 +9,24 @@
     <script src="https://kit.fontawesome.com/1566b08547.js" crossorigin="anonymous"></script>
 </head>
 <body class="bg-gray-50">
-    <main class="bg-white rounded-2xl shadow-lg p-2">
-        <section class="mb-4">
+    <main class="bg-gray-50 p-2">
+        <section class="my-4">
             <div class="flex justify-center items-center gap-1 mb-4">
-                <h1 class="text-[16px] font-bold flex text-[#3b5361]">
+                <h1 class="text-[16px] font-bold flex text-slate-700">
                     KNUST - Entry Registration
                 </h1>
             </div>
-            <div class="bg-gray-50 border border-slate-200 p-4 rounded-lg">
-                <div class="">
-                   <p class="text-sm text-blue-500">Invoice To:</p>
+        </section>
+
+        <section class="space-y-4 bg-white rounded-xl shadow-sm border border-slate-200">
+            <div class="space-y-4 py-[0.5rem]">
+                <div class="px-4">
+                    <p class="text-sm text-blue-500">Invoice To:</p>
                     <small class="text-sm font-regular text-slate-700">
                         Ennam
                     </small>
                 </div>
-                <div class=" mt-1">
+                <div class=" px-4">
                     <div class="text-sm  text-blue-500">
                         Invoice from: 
                     </div>
@@ -33,35 +36,26 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
 
-        <section class="space-y-4 bg-gray-50 rounded-xl shadow-sm border border-slate-200">
-            <div class="space-y-4 py-[0.5rem]">
+                <!-- Due-Date -->
                 <div class="flex flex-col gap-[0.1rem] px-4 rounded-lg">
                     <p class="text-sm text-blue-500">Due Date</p>
                     <p class="text-sm text-slate-700">07-SEP-2024</p>
                 </div>
 
+                <!-- Invoice-Number -->
                 <div class="flex flex-col gap-[0.1rem] px-4">
                     <p class="text-sm text-blue-500">Invoice Number</p>
                     <p class="text-sm text-slate-700">AM-2 </p>
                 </div>
 
-                <div class="flex flex-col gap-[0.1rem] items-start px-2">
-                    <p class="text-sm text-blue-500">Description</p>
-                    <textarea 
-                        class="w-[100%] text-sm text-slate-700 bg-transparent resize-none border border-slate-400 border-opacity-10 rounded-lg p-2" 
-                        rows="2"
-                        disabled
-                    >KNUST - Entry Registration </textarea>
-                </div>
+                <!-- Line-Items -->
                 <div class="">
                     <div class="flex justify-between items-center w-full px-4">
-                        <p class="text-sm text-blue-500 mb-2">Items</p>
+                        <p class="text-sm text-blue-500 ">Items</p>
                     </div>
-                    <div class="w-full ">
-                        <div class="border-b border-slate-200 px-2 py-[0.5rem]">
+                    <ul class="w-full ">
+                        <li class="list-none border-b border-slate-200 px-2 py-[0.5rem]">
                             <div class="flex justify-between items-center px-[0.5rem]">
                                 <p class="text-sm font-medium text-slate-700">Tuition Fees </p>
                             </div>
@@ -79,8 +73,8 @@
                                     <p class="text-sm text-nowrap text-slate-600">GHS 3,000.00</p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="border-b border-slate-200 px-2 py-[0.5rem]">
+                        </li>
+                        <li class="list-none border-b border-slate-200 px-2 py-[0.5rem]">
                             <div class="flex justify-between items-center px-[0.5rem]">
                                 <p class="text-sm font-medium text-slate-700">Hostel Fees </p>
                             </div>
@@ -98,16 +92,16 @@
                                     <p class="text-sm text-nowrap text-slate-600">GHS 5,000.00</p>
                                 </div>
                             </div>
-                        </div>
-                    </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
-            <div class="flex items-center justify-between px-[0.5rem]">
-                <p class="text-sm font-bold text-slate-700">Sub Total: </p>
+            <div class="flex items-center justify-between px-4">
+                <p class="text-sm font-bold text-blue-500">Sub Total: </p>
                 <p class="text-sm text-nowrap font-bold text-slate-600">GHS 6600.00</p>
             </div>
-            <div class="flex items-center justify-between px-[0.5rem]">
-                <p class="text-sm font-bold text-slate-700">Tax: </p>
+            <div class="flex items-center justify-between px-4">
+                <p class="text-sm font-bold text-blue-500">Tax: </p>
                 <p class="text-sm text-nowrap font-bold text-slate-600">GHS 0.10</p>
             </div>
 
@@ -121,7 +115,7 @@
 
         <section class="mt-8 space-y-2">
             <button class="w-full bg-rose-500 hover:bg-rose-400 duration-300 transition-colors py-[0.5rem] rounded-full shadow-md">
-                <a href="payment-methods.html" class="text-white uppercase font-bold text-sm block">
+                <a href="" class="text-white uppercase font-bold text-sm block">
                     Sign In
                 </a>
             </button>
@@ -134,7 +128,7 @@
 
         <section class="mt-4 text-center">
             <div class="100 p-4 rounded-xl ">
-                <p class="text-xs text-gray-600 mb-3">Get better experience with our Native App</p>
+                <p class="text-xs text-gray-600 font-medium mb-3">Get better experience with our Native App</p>
                 <div class="flex m-0 p-0 justify-center items-center gap-3 mt-4 w-full">
                     <div class="w-[100px] ">
                         <img src="files/apple-store.png" alt="App Store" class="w-[100%] object-cover object-center">
