--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
             </div>
         </section>
 
-        <section class="space-y-4 bg-white rounded-xl shadow-sm border border-slate-200">
+        <section class="space-y-4 px-4 bg-white rounded-xl shadow-sm border border-slate-200">
             <div class="space-y-4 py-[0.5rem]">
-                <div class="px-4">
+                <div class="">
                     <p class="text-sm text-blue-500">Invoice To:</p>
                     <small class="text-sm font-regular text-slate-700">
                         Ennam
                     </small>
                 </div>
-                <div class=" px-4">
+                <div class=" ">
                     <div class="text-sm  text-blue-500">
                         Invoice from: 
                     </div>
@@ -38,20 +38,20 @@
                 </div>
 
                 <!-- Due-Date -->
-                <div class="flex flex-col gap-[0.1rem] px-4 rounded-lg">
+                <div class="flex flex-col gap-[0.1rem]  rounded-lg">
                     <p class="text-sm text-blue-500">Due Date</p>
                     <p class="text-sm text-slate-700">07-SEP-2024</p>
                 </div>
 
                 <!-- Invoice-Number -->
-                <div class="flex flex-col gap-[0.1rem] px-4">
+                <div class="flex flex-col gap-[0.1rem] ">
                     <p class="text-sm text-blue-500">Invoice Number</p>
                     <p class="text-sm text-slate-700">AM-2 </p>
                 </div>
 
                 <!-- Line-Items -->
                 <div class="">
-                    <div class="flex justify-between items-center w-full px-4">
+                    <div class="flex justify-between items-center w-full ">
                         <p class="text-sm text-blue-500 ">Items</p>
                     </div>
                     <ul class="w-full ">
@@ -96,11 +96,11 @@
                     </ul>
                 </div>
             </div>
-            <div class="flex items-center justify-between px-4">
+            <div class="flex items-center justify-between ">
                 <p class="text-sm font-bold text-blue-500">Sub Total: </p>
                 <p class="text-sm text-nowrap font-bold text-slate-600">GHS 6600.00</p>
             </div>
-            <div class="flex items-center justify-between px-4">
+            <div class="flex items-center justify-between ">
                 <p class="text-sm font-bold text-blue-500">Tax: </p>
                 <p class="text-sm text-nowrap font-bold text-slate-600">GHS 0.10</p>
             </div>
