--- a/index.html
+++ b/index.html
@@ -128,15 +128,15 @@
 
         <section class="mt-4 text-center">
             <div class="100 p-4 rounded-xl ">
-                <p class="text-xs text-gray-600 font-medium mb-3">Get better experience with our Native App</p>
-                <div class="flex m-0 p-0 justify-center items-center gap-3 mt-4 w-full">
+                <!-- <p class="text-xs text-gray-600 font-medium mb-3">Get better experience with our Native App</p> -->
+                <!-- <div class="flex m-0 p-0 justify-center items-center gap-3 mt-4 w-full">
                     <div class="w-[100px] ">
                         <img src="files/apple-store.png" alt="App Store" class="w-[100%] object-cover object-center">
                     </div>
                     <div class="w-[100px]">
                         <img src="files/google-play-1.png" alt="App Store" class="w-[100%] h-auto object-cover object-center">
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
     </main>
