--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/1566b08547.js" crossorigin="anonymous"></script>
 </head>
-<body class="bg-gray-50">
-    <main class="bg-gray-50 p-2">
+<body class="bg-white">
+    <main class="bg-slate-50 p-2">
         <section class="my-4">
             <div class="flex justify-center items-center gap-1 mb-4">
                 <h1 class="text-[16px] font-bold flex text-slate-700">
@@ -114,7 +114,7 @@
         </section>
 
         <section class="mt-8 space-y-2">
-            <button class="w-full bg-rose-500 hover:bg-rose-400 duration-300 transition-colors py-[0.5rem] rounded-full shadow-md">
+            <button class="w-full bg-blue-400 hover:bg-blue-500 duration-300 transition-colors py-[0.5rem] rounded-full shadow-md">
                 <a href="" class="text-white uppercase font-bold text-sm block">
                     Sign In
                 </a>
