--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <section class="space-y-4 px-4 bg-white rounded-xl shadow-sm border border-slate-200">
             <div class="space-y-4 py-[0.5rem]">
                 <div class="">
-                    <p class="text-sm text-blue-500">Invoice To:</p>
+                    <p class="text-sm text-[#101585]">Invoice To:</p>
                     <small class="text-sm font-regular text-slate-700">
                         Ennam
                     </small>
                 </div>
                 <div class=" ">
-                    <div class="text-sm  text-blue-500">
+                    <div class="text-sm  text-[#101585]">
                         Invoice from: 
                     </div>
                     <div class="flex text-sm gap-[0.3rem]">
@@ -39,20 +39,20 @@
 
                 <!-- Due-Date -->
                 <div class="flex flex-col gap-[0.1rem]  rounded-lg">
-                    <p class="text-sm text-blue-500">Due Date</p>
+                    <p class="text-sm text-[#101585]">Due Date</p>
                     <p class="text-sm text-slate-700">07-SEP-2024</p>
                 </div>
 
                 <!-- Invoice-Number -->
                 <div class="flex flex-col gap-[0.1rem] ">
-                    <p class="text-sm text-blue-500">Invoice Number</p>
+                    <p class="text-sm text-[#101585]">Invoice Number</p>
                     <p class="text-sm text-slate-700">AM-2 </p>
                 </div>
 
                 <!-- Line-Items -->
                 <div class="">
                     <div class="flex justify-between items-center w-full ">
-                        <p class="text-sm text-blue-500 ">Items</p>
+                        <p class="text-sm text-[#101585] ">Items</p>
                     </div>
                     <ul class="w-full ">
                         <li class="list-none border-b border-slate-200 px-2 py-[0.5rem]">
@@ -97,31 +97,31 @@
                 </div>
             </div>
             <div class="flex items-center justify-between ">
-                <p class="text-sm font-bold text-blue-500">Sub Total: </p>
+                <p class="text-sm font-bold text-[#101585]">Sub Total: </p>
                 <p class="text-sm text-nowrap font-bold text-slate-600">GHS 6600.00</p>
             </div>
             <div class="flex items-center justify-between ">
-                <p class="text-sm font-bold text-blue-500">Tax: </p>
+                <p class="text-sm font-bold text-[#101585]">Tax: </p>
                 <p class="text-sm text-nowrap font-bold text-slate-600">GHS 0.10</p>
             </div>
 
             <div class="p-4 mt-4 ">
                 <div class="flex flex-col items-center gap-[0.1rem]">
-                    <p class="text-[20px] font-medium text-blue-500">Total</p>
+                    <p class="text-[20px] font-medium text-[#101585]">Total</p>
                     <p class="text-[25px] font-bold text-slate-700">GHS 5,150.20</p>
                 </div>
             </div>
         </section>
 
         <section class="mt-8 space-y-2">
-            <button class="w-full bg-blue-400 hover:bg-blue-500 duration-300 transition-colors py-[0.5rem] rounded-full shadow-md">
+            <button class="w-full bg-[#101585] hover:bg-blue-600 duration-300 transition-colors py-[0.5rem] rounded-full shadow-md">
                 <a href="" class="text-white uppercase font-bold text-sm block">
                     Sign In
                 </a>
             </button>
 
             <p class="text-sm text-center text-gray-500">
-                <a href="#!" class="text-blue-500 underline font-bold"></a> 
+                <a href="#!" class="text-[#101585] underline font-bold"></a> 
                 to make payment
             </p>
         </section>
