--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/1566b08547.js" crossorigin="anonymous"></script>
 </head>
-<body class="bg-white">
-    <main class="bg-slate-50 p-2">
+<body class="bg-gray-50">
+    <main class="bg-gray-50 p-2">
         <section class="my-4">
             <div class="flex justify-center items-center gap-1 mb-4">
-                <h1 class="text-[16px] font-bold flex text-[#5a5183]">
+                <h1 class="text-[16px] font-bold flex text-slate-700">
                     KNUST - Entry Registration
                 </h1>
             </div>
@@ -21,75 +21,75 @@
         <section class="space-y-4 px-4 bg-white rounded-xl shadow-sm border border-slate-200">
             <div class="space-y-4 py-[0.5rem]">
                 <div class="">
-                    <p class="text-sm text-[#101585]">Invoice To:</p>
-                    <small class="text-sm font-regular text-[#362e54]">
+                    <p class="text-sm text-slate-600">Invoice To:</p>
+                    <small class="text-sm font-regular text-slate-700">
                         Ennam
                     </small>
                 </div>
                 <div class=" ">
-                    <div class="text-sm  text-[#101585]">
+                    <div class="text-sm text-slate-600">
                         Invoice from: 
                     </div>
                     <div class="flex text-sm gap-[0.3rem]">
                         <div class="">
-                            <span class=" text-[#362e54] block mt-1">KNUST - Kumasi</span>
+                            <span class="text-slate-700 block mt-1">KNUST - Kumasi</span>
                         </div>
                     </div>
                 </div>
 
                 <!-- Due-Date -->
                 <div class="flex flex-col gap-[0.1rem]  rounded-lg">
-                    <p class="text-sm text-[#101585]">Due Date</p>
-                    <p class="text-sm text-[#362e54]">07-SEP-2024</p>
+                    <p class="text-sm text-slate-600">Due Date</p>
+                    <p class="text-sm text-slate-700">07-SEP-2024</p>
                 </div>
 
                 <!-- Invoice-Number -->
                 <div class="flex flex-col gap-[0.1rem] ">
-                    <p class="text-sm text-[#101585]">Invoice Number</p>
-                    <p class="text-sm text-[#362e54]">AM-2 </p>
+                    <p class="text-sm text-slate-600">Invoice Number</p>
+                    <p class="text-sm text-slate-700">AM-2 </p>
                 </div>
 
                 <!-- Line-Items -->
                 <div class="">
                     <div class="flex justify-between items-center w-full ">
-                        <p class="text-sm text-[#101585] ">Items</p>
+                        <p class="text-sm text-slate-600 ">Items</p>
                     </div>
                     <ul class="w-full ">
                         <li class="list-none border-b border-slate-200 px-2 py-[0.5rem]">
                             <div class="flex justify-between items-center px-[0.5rem]">
-                                <p class="text-sm font-medium text-[#362e54]">Tuition Fees </p>
+                                <p class="text-sm font-medium text-slate-700">Tuition Fees </p>
                             </div>
                             <div class="space-y-1 w-full p-[0.5rem]">
                                 <div class="flex items-center justify-between">
-                                    <p class="text-xs text-[#362e54] ">Unit Price:</p>
-                                    <p class="text-xs text-[#362e54] ">GHS 3,000.00</p>
+                                    <p class="text-xs text-slate-600 ">Unit Price:</p>
+                                    <p class="text-xs text-slate-700 ">GHS 3,000.00</p>
                                 </div>
                                 <div class="flex items-center justify-between">
-                                    <p class="text-xs text-[#362e54]">Qty: </p>
-                                    <p class="text-xs text-[#362e54] ">1</p>
+                                    <p class="text-xs text-slate-600">Qty: </p>
+                                    <p class="text-xs text-slate-700 ">1</p>
                                 </div>
                                 <div class="flex items-center justify-between ">
-                                    <p class="text-sm text-[#362e54]">Amount: </p>
-                                    <p class="text-sm text-nowrap text-[#362e54]">GHS 3,000.00</p>
+                                    <p class="text-sm text-slate-600">Amount: </p>
+                                    <p class="text-sm text-nowrap text-slate-700">GHS 3,000.00</p>
                                 </div>
                             </div>
                         </li>
                         <li class="list-none border-b border-slate-200 px-2 py-[0.5rem]">
                             <div class="flex justify-between items-center px-[0.5rem]">
-                                <p class="text-sm font-medium text-[#362e54]">Hostel Fees </p>
+                                <p class="text-sm font-medium text-slate-600">Hostel Fees </p>
                             </div>
                             <div class="space-y-1 w-full p-[0.5rem]">
                                 <div class="flex items-center justify-between">
-                                    <p class="text-xs text-[#362e54] ">Unit Price:</p>
-                                    <p class="text-xs text-[#362e54] ">GHS 5,000.00</p>
+                                    <p class="text-xs text-slate-600 ">Unit Price:</p>
+                                    <p class="text-xs text-slate-700 ">GHS 5,000.00</p>
                                 </div>
                                 <div class="flex items-center justify-between">
-                                    <p class="text-xs text-[#362e54]">Qty: </p>
-                                    <p class="text-xs text-[#362e54] ">1</p>
+                                    <p class="text-xs text-slate-600">Qty: </p>
+                                    <p class="text-xs text-slate-700 ">1</p>
                                 </div>
                                 <div class="flex items-center justify-between ">
-                                    <p class="text-sm text-[#362e54]">Amount: </p>
-                                    <p class="text-sm text-nowrap text-[#362e54]">GHS 5,000.00</p>
+                                    <p class="text-sm text-slate-600">Amount: </p>
+                                    <p class="text-sm text-nowrap text-slate-700">GHS 5,000.00</p>
                                 </div>
                             </div>
                         </li>
@@ -97,31 +97,31 @@
                 </div>
             </div>
             <div class="flex items-center justify-between ">
-                <p class="text-sm font-bold text-[#101585]">Sub Total: </p>
-                <p class="text-sm text-nowrap font-bold text-[#101585]">GHS 6600.00</p>
+                <p class="text-sm font-bold text-slate-600">Sub Total: </p>
+                <p class="text-sm text-nowrap font-bold text-slate-800">GHS 6600.00</p>
             </div>
             <div class="flex items-center justify-between ">
-                <p class="text-sm font-bold text-[#101585]">Tax: </p>
-                <p class="text-sm text-nowrap font-bold text-[#101585]">GHS 0.10</p>
+                <p class="text-sm font-bold text-slate-600">Tax: </p>
+                <p class="text-sm text-nowrap font-bold text-slate-600">GHS 0.10</p>
             </div>
 
             <div class="p-4 mt-4 ">
                 <div class="flex flex-col items-center gap-[0.1rem]">
-                    <p class="text-[20px] font-bold text-[#5a5183]">Total</p>
-                    <p class="text-[25px] font-bold text-[#5a5183]">GHS 5,150.20</p>
+                    <p class="text-[20px] font-medium text-slate-600">Total</p>
+                    <p class="text-[25px] font-bold text-slate-900">GHS 5,150.20</p>
                 </div>
             </div>
         </section>
 
         <section class="mt-8 space-y-2">
-            <button class="w-full bg-[#5a5183] hover:bg-blue-600 duration-300 transition-colors py-[0.5rem] rounded-full shadow-md">
+            <button class="w-full bg-rose-500 hover:bg-rose-600 duration-300 transition-colors py-[0.5rem] rounded-full shadow-md">
                 <a href="" class="text-white uppercase font-bold text-sm block">
                     Sign In
                 </a>
             </button>
 
             <p class="text-sm text-center text-gray-500">
-                <a href="#!" class="text-[#101585] underline font-bold"></a> 
+                <a href="#!" class="text-blue-600 underline font-bold"></a> 
                 to make payment
             </p>
         </section>
